--- a/lessons/dbt_project.yml
+++ b/lessons/dbt_project.yml
@@ -34,4 +34,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   lessons:
-    +materialized: table
+    # Config indicated by "+"" and applies to all files under models/example/
+    # It would still work without the "+", but it's useful to distinguish from a resource path
+    +materialized: table # Default to table materialisation
