--- a/lessons/models/staging/stg_ecommerce__orders.yml
+++ b/lessons/models/staging/stg_ecommerce__orders.yml
@@ -11,7 +11,8 @@ models:
           - unique
 
       - name: user_id
-        description: ""
+        tests:
+          - not_null
 
       - name: status
         description: ""
@@ -19,23 +20,36 @@ models:
           - accepted_values:
               name: unexpected_order_status # We can name our tests to make it easier to give more meaningful errors
               values:
-              - Processing
-              - Cancelled
-              - Shipped
-              - Complete
-              - Returned
+                - Processing
+                - Cancelled
+                - Shipped
+                - Complete
+                - Returned
 
       - name: created_at
-        description: ""
+        description: "When the order was created"
+        tests:
+          - not_null
 
       - name: returned_at
-        description: ""
+        description: "When the order was returned"
+        tests:
+          - not_null:
+              where: "status = 'Returned'"
 
       - name: shipped_at
-        description: ""
+        description: "When the order was shipped"
+        tests:
+          - not_null:
+              where: "delivered_at IS NOT NULL OR status = 'Shipped'"
 
       - name: delivered_at
-        description: ""
+        description: "When the order was delivered"
+        tests:
+          - not_null:
+              where: "returned_at IS NOT NULL OR status = 'Complete'"
 
       - name: num_items_ordered
-        description: ""
+        description: "Number of items in the order"
+        tests:
+          - not_null
