--- a/answers/dbt_project.yml
+++ b/answers/dbt_project.yml
@@ -46,6 +46,8 @@ models:
     # Table deletes 168 hours (7 days) after creation
     # Note, for incremental models this does not reset each run!
     +hours_to_expiration: 168
+    intermediate:
+      +tags: ['my_tag','my_other_tag']
 
 tests:
   answers:
